# BLT-SafeCloak

./: .prettierignore  .prettierrc  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements-dev.txt  wrangler.toml
.github/agents/: pr-agent.agent.md
public/: consent.html  index.html  notes.html  video-chat.html
public/css/: main.css
public/js/: consent.js  crypto.js  notes.js  ui.js  video-lobby.js  video.js
src/: main.py
src/libs/: utils.py
src/pages/: consent.html  index.html  notes.html  video-chat.html  video-room.html
tests/: test_utils.py  test_video_chat.py
